crates/model/tests/compile_fail/fsm_transition_bad_target.stderr
error: transition target `ghost` not found in states list
  --> tests/compile_fail/fsm_transition_bad_target.rs:11:32
   |
11 |         transitions: { idle => ghost },
   |                                ^^^^^
